2006-12-14 Kurt Maute <Kurt@Maute.us>
	* src/planner-window.c:  use ngettext for translation of plural.  Bug
	# 345163, patch contributed by Arthur Petitpierre
	* data/stylesheets/html1_css.xsl:  fix row height alignment of gantt
	on html export when viewed in Internet Explorer.  Bug # 332748, patch
	contributed by Nico de Groot
	* data/images/(various).png: commit Tango images contributed by
	Frédéric Bellaiche via bug #357525

2006-11-26 Kurt Maute <Kurt@Maute.us>
	* configure.in:  Version 0.14.2
	* data/mime/planner.xml.in: bug #353232 - patch to raise majic
	priority, fixing nautilus behavior when clicking on a planner file

2006-11-25 Kurt Maute <Kurt@Maute.us>
	* src/planner-gantt-background.c:  bug #368186 - patch to paint guide
	lines behind project start date rather than on top - contributed by
	Arthur Petitpierre
	* acinclude.m4:  added -Wno-return-type for compile with database
	enabled
	* configure.in
	* libplanner/mrp-sql.c
	* src/planner-sql-plugin.c:
	  patch related to bug #353213 - added #ifdefs to allow compile with
	  libgda 1 or 2, up to libgda-1.9.102

2006-11-18  Djihed Afifi  <djihed@gmail.com>

	* configure.in: Added Arabic.

2006-11-12 Kurt Maute <Kurt@Maute.us>
	* src/planner-gantt-row.c: fix for bug 358415 crash in gantt view,
	contributed by Arthur Petitpierre and mdpoole trolius org.

2006-09-24 Kurt Maute <Kurt@Maute.us>
	* configure.in:  Version 0.14.1

2006-09-23 Kurt Maute <Kurt@Maute.us>
	* data/planner.1:  man page contributed by Martin-Eric Racine
	* data/Makefile.am:  for man page contributed by Martin-Eric Racine
	* configure.in: fix for bug #353213 contrubuted by Dennis Lubert
	* libplanner/mrp-sql.c: fix for bug #353213 contrubuted by Dennis Lubert
	* src/planner-sql-plugin.c: fix for bug #353213 contrubuted by Dennis Lubert

2006-09-13  Pema Geyleg  <pgeyleg@gmail.com>

	* configure.in: Added dz in ALL_LINGUAS

2006-07-08 Kurt Maute <Kurt@Maute.us>