@@ -1,0 +1,16 @@
+<?xml version="1.0" standalone="yes"?> 
+
+<ui>
+<_string>Company:</_string>
+<_string>Manager:</_string>
+<_string>Start:</_string>
+<_string>Finish:</_string>
+<_string>Report Date:</_string>
+<_string>Week</_string>
+<_string>Priority</_string>
+<_string>Complete</_string>
+<_string>This file was generated by</_string>
+<_string>Gantt Chart</_string>
+<_string>Phase:</_string>
+<_string>Unnamed Project</_string>
+</ui>
