@@ -3,7 +3,8 @@
 <xsl:stylesheet version="1.0"
               xmlns:xsl="http://www.w3.org/1999/XSL/Transform"
                   xmlns="http://www.w3.org/1999/xhtml"
-             xmlns:date="http://exslt.org/dates-and-times">
+             xmlns:date="http://exslt.org/dates-and-times"
+	     xmlns:I18N="http://www.gnu.org/software/gettext/" extension-element-prefixes="I18N">
 
 <!--
   Copyright (C) 2004-2005 Imendio AB
@@ -17,7 +18,7 @@
 
 <xsl:output 
   method="xml"
-  encoding="ISO-8859-1"
+  encoding="utf-8"
   indent="yes"
   doctype-public="-//W3C//DTD XHTML 1.0 Strict//EN"
   doctype-system="http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"
@@ -151,7 +152,7 @@
 <!--                                Footer                                 -->
 <xsl:template name="htmlfooter">
   <div class="footer">
-    <div>This file was generated by <a href="http://www.imendio.com/projects/planner/">Planner</a></div>
+    <div><xsl:value-of select="I18N:gettext('This file was generated by')"/>&nbsp;<a href="http://www.imendio.com/projects/planner/">Planner</a></div>
   </div>
 </xsl:template>
 
@@ -190,7 +191,7 @@
             <xsl:value-of select="@name"/>
           </xsl:when>
           <xsl:otherwise>
-            Unnamed Project
+            <xsl:value-of select="I18N:gettext('Unnamed Project')"/>
           </xsl:otherwise>
         </xsl:choose>
         </a>
@@ -200,7 +201,7 @@
 
 <xsl:if test="@company != ''">
 <tr>
-  <td class="header">Company:</td>
+  <td class="header"><xsl:value-of select="I18N:gettext('Company:')"/></td>
   <td>
     <xsl:value-of select="@company"/>
   </td>
@@ -209,7 +210,7 @@
 
 <xsl:if test="@manager != ''">
 <tr>
-  <td class="header">Manager:</td>
+  <td class="header"><xsl:value-of select="I18N:gettext('Manager:')"/></td>
   <td>
     <xsl:value-of select="@manager"/>
   </td>
@@ -217,24 +218,16 @@
 </xsl:if>
 
 <tr>
-  <td class="header">Start:</td>
+  <td class="header"><xsl:value-of select="I18N:gettext('Start:')"/></td>
   <td>
-    <xsl:value-of select="date:month-name($projstart)"/>
-    <xsl:text> </xsl:text>
-    <xsl:value-of select="date:day-in-month($projstart)"/>
-    <xsl:text>, </xsl:text>
-    <xsl:value-of select="date:year($projstart)"/>
+    <xsl:value-of select="I18N:getdate(date:seconds($projstart))"/>	
   </td>
 </tr>
 
 <tr>
-  <td class="header">Finish:</td>
+  <td class="header"><xsl:value-of select="I18N:gettext('Finish:')"/></td>
   <td>
-    <xsl:value-of select="date:month-name($projend)"/>
-    <xsl:text> </xsl:text>
-    <xsl:value-of select="date:day-in-month($projend)"/>
-    <xsl:text>, </xsl:text>
-    <xsl:value-of select="date:year($projend)"/>
+    <xsl:value-of select="I18N:getdate(date:seconds($projend))"/>
   </td>
 </tr>
 
@@ -248,7 +241,7 @@
 
 <xsl:if test="@phase != ''">
 <tr>
-  <td class="header">Phase:</td>
+  <td class="header"><xsl:value-of select="I18N:gettext('Phase:')"/></td>
   <td>
     <xsl:value-of select="@phase"/>
   </td>
@@ -273,13 +266,9 @@
 </xsl:for-each>
 
 <tr>
-  <td class="header">Report Date:</td>
+  <td class="header"><xsl:value-of select="I18N:gettext('Report Date:')"/></td>
   <td>
-    <xsl:value-of select="date:month-name(date:date())"/>
-    <xsl:text> </xsl:text>
-    <xsl:value-of select="date:day-in-month(date:date())"/>
-    <xsl:text>, </xsl:text>
-    <xsl:value-of select="date:year(date:date ())"/>
+    <xsl:value-of select="I18N:getdate(date:seconds(date:date()))"/>
   </td>
 </tr>
 </table>
