@@ -20,7 +20,7 @@ data/mime/planner.xml.in
 
 data/planner.desktop.in.in
 data/planner.schemas.in
-
+data/stylesheets/localizable.xml
 libegg/recent-files/egg-recent-vfs-utils.c
 
 libplanner/mrp-assignment.c
