@@ -1,3 +1,13 @@
+2006-12-27 Jordi Mas i Hernàndez <jordimash@gmail.com>
+
+	* data/stylesheets/html1_gantt.xsl: I18N for strings and dates 
+	* data/stylesheets/html1_resources.xsl: I18N for strings and dates
+	* data/stylesheets/html1_tasks.xsl: I18N for strings and dates
+	* data/stylesheets/planner2html.xsl: I18N for strings and dates
+	* libplanner/mrp-xsl.c: Add I18N support for HTML export
+	* po/POTFILES.in: Adds localizable.xml
+	* data/stylesheets/localizable.xml: New strings to localise
+
 2006-12-14 Kurt Maute <Kurt@Maute.us>
 	* src/planner-window.c:  use ngettext for translation of plural.  Bug
 	# 345163, patch contributed by Arthur Petitpierre
